@@ -1,3 +1,8 @@
+2008-12-11  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/eggdesktopfile.c (set_startup_notification_timeout):
+	Update libegg files from trunk libegg.
+
 2008-12-11  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-video-indexer.c (main): Add --no-limit
